...
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="save2">👌 Save</string>
    <string name="new_post">New Post</string>
    <string name="empty_image_warning">Please upload an image file first.</string>
    <string name="loading">Loading</string>
    <string name="logout">Logout</string>
    <string name="registration_successful">Registration successful</string>
    <string name="data_invalid">Invalid Data</string>
    <string name="login_successful">Login successful</string>
    <string name="description_empty">Description is empty</string>
    <string name="success">Success: %1$s</string>
    <string name="an_error_occurred_during_post_creation">An error occurred during post creation.</string>
...
    <string name="permission_request_denied">Permission request denied</string>
    <string name="min_8_character">Min 8 characters</string>
    <string name="email_empty">Email is empty</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="location">Location</string>
    <string name="desc_location">Your location will be used to add context to the story you are sharing</string>
    <string name="please_enable_location">Please enable your location</string>
...
