...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:layoutDescription="@xml/activity_start_scene3"
    tools:context=".ui.StartActivity">

    <ImageView
        android:id="@+id/img_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
...
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="?attr/customBackgroundColorButton"
            android:text="@string/login"
...
