...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/customBottomSheetBackground"
            android:clipToPadding="false"
            android:paddingBottom="125dp"
            tools:layout_editor_absoluteX="-24dp"
...
